[gd_scene load_steps=4 format=3 uid="uid://itgn0fqnfyv5"]

[ext_resource type="Texture2D" uid="uid://bfl6k7ka5wkcp" path="res://assets/bullet.png" id="1_3sftf"]
[ext_resource type="Script" uid="uid://dstjcva7l3p3n" path="res://enemy/enemy_bullet.gd" id="1_4pqs0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0hr8"]
size = Vector2(8, 8)

[node name="Area2D" type="Area2D"]
collision_layer = 4
collision_mask = 271
script = ExtResource("1_4pqs0")
speed = 400.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.2, 0.2, 1)
scale = Vector2(8, 8)
texture = ExtResource("1_3sftf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l0hr8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
